[gd_scene load_steps=10 format=3 uid="uid://d2vaanbqf83iu"]

[ext_resource type="Script" path="res://scripts/fireball.gd" id="1_p624l"]
[ext_resource type="Script" path="res://scripts/hurtbox.gd" id="1_tp4qp"]
[ext_resource type="Script" path="res://scripts/hitbox.gd" id="2_73q3d"]
[ext_resource type="Texture2D" uid="uid://neh1ok6u4k4a" path="res://media/graphics/fireball.png" id="3_fws2a"]
[ext_resource type="PackedScene" uid="uid://edlgvg0tw61b" path="res://scenes/stop_component.tscn" id="5_rmfqv"]
[ext_resource type="PackedScene" uid="uid://div8rux31gto0" path="res://scenes/despawner.tscn" id="6_rbs34"]
[ext_resource type="Script" path="res://scripts/flame_spawner.gd" id="7_qyq72"]
[ext_resource type="Script" path="res://scripts/health_component.gd" id="8_wt85m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wux15"]
size = Vector2(7, 6)

[node name="Fireball" type="CharacterBody2D"]
script = ExtResource("1_p624l")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("8_wt85m")
max_hp = 1

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_tp4qp")
damage = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0.47, 0)
shape = SubResource("RectangleShape2D_wux15")

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 4
collision_mask = 288
script = ExtResource("2_73q3d")
health_component = NodePath("../HealthComponent")
awarded_points = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.47, 0)
shape = SubResource("RectangleShape2D_wux15")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_fws2a")

[node name="StopComponent" parent="." instance=ExtResource("5_rmfqv")]

[node name="Despawner" parent="." instance=ExtResource("6_rbs34")]

[node name="FlameSpawner" type="Node2D" parent="."]
script = ExtResource("7_qyq72")

[connection signal="area_entered" from="Hitbox" to="Hitbox" method="_on_area_entered"]
[connection signal="got_hit" from="Hitbox" to="." method="_on_hitbox_got_hit"]
